--- a/manifest/operator.yaml
+++ b/manifest/operator.yaml
@@ -44,7 +44,7 @@ spec:
       serviceAccountName: spark-operator
       containers:
       - name: spark-operator
-        image: jkremser/spark-operator:latest-released
+        image: radanalyticsio/spark-operator:latest-released
         #env:
         #- name: WATCHED_NAMESPACE
         #  value: myproject
